# CPPserverFromScratch

./: CMakeLists.txt  output.txt
Utils/: connreader  connreader.cpp  main.cpp  messages.txt  tcpListner.cpp  tcpListner.h
cmd/: coffeehandler.hpp  main.cpp  tcpListner.cpp  tcpListner.h
info/: what_is_a_tcp?
internal/request/: request.cpp  request.hpp  request_test.cpp
server/: interface.hpp  router.hpp  server.cpp  server.hpp
